Use simple markup for bold and monospace in lint issues
The explanation text for issues can now contain some simple
markup such as * around sentences for bold and ` for monospace.
In the HTML report this is converted to HTML markup using <b>
and <code> spans, as well as <a> for http:// links.

Change-Id: I875a55a0ab9a61c2e8bb493ad94d5e4d51dd1072